--- a/readme
+++ b/readme
@@ -4,3 +4,5 @@ https://diana-adrianne.com/purecss-lace/
 CSS Properties
 https://htmldog.com/references/css/properties/
 
+Flexbox guide css
+https://css-tricks.com/snippets/css/a-guide-to-flexbox/
